--- a/python_m/.vscode/settings.json
+++ b/python_m/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.analysis.autoImportCompletions": true
+    "python.analysis.autoImportCompletions": true,
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false,
+        "c": false
+    }
 }
