chore: update .env example

--- a/python_m/.env.example
+++ b/python_m/.env.example
@@ -1,2 +1,8 @@
-ACCESS_KEY_AWS = ""
-SECRET_KEY_AWS = ""
+BUCKET_NAME =
+HOST_DATABASE = 
+PORT_DATABASE = 
+USER_DATABASE = 
+PASSWORD_DATABASE = 
+NAME_DATABASE = 
+ACCESS_KEY_AWS = 
+SECRET_KEY_AWS = 
