--- a/python_m/.vscode/settings.json
+++ b/python_m/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "python.analysis.autoImportCompletions": true,
     "github.copilot.enable": {
-        "*": true,
+        "*": false,
         "plaintext": false,
         "markdown": false,
         "scminput": false,
-        "c": false
+        "c": false,
+        "python": false
     }
 }
