chore: update .env example

--- a/python_m/.env.example
+++ b/python_m/.env.example
@@ -1,8 +1,12 @@
-BUCKET_NAME =
-HOST_DATABASE = 
-PORT_DATABASE = 
-USER_DATABASE = 
-PASSWORD_DATABASE = 
-NAME_DATABASE = 
+BUCKET_NAME="python-test"
+HOST_DATABASE = "localhost"
+PORT_DATABASE = "3306"
+USER_DATABASE = "root"
+PASSWORD_DATABASE = "password"
+NAME_DATABASE = "my_stream"
 ACCESS_KEY_AWS = 
 SECRET_KEY_AWS = 
+USER_RABBITMQ = "root"
+PASSWORD_RABBITMQ = "root123"
+EXCHANGE_RABBITMQ = "test"
+ROUTINGKEY_RABBITMQ = "C"
