--- a/python_m/requirements.txt
+++ b/python_m/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.115.12
 minio==7.2.15
-mysql-connector==2.2.9
+mysql_connector_repackaged==0.3.1
+pika==1.3.2
+Pillow==11.2.1
 pydantic==2.11.4
 python-dotenv==1.1.0
 uvicorn==0.34.2
