feat: add logic to download file from bucket by queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     },
     "python.analysis.extraPaths": [
         "./python_m",
-        "./python_m"
+        "./python_m",
+        "./processFiles"
     ]
 }
